raw/issue-32278-big-array-of-strings--2016-11-09-12-29-18--2.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./issue-32278-big-array-of-strings
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling issue-32278-big-array-of-strings v0.1.0 (file:///root/benchmarks/issue-32278-big-array-of-strings)
time: 0.100; rss: 60MB	parsing
Lines of code:             65577
Pre-expansion node count:  65552
time: 0.000; rss: 60MB	recursion limit
time: 0.000; rss: 60MB	crate injection
time: 0.000; rss: 60MB	plugin loading
time: 0.000; rss: 60MB	plugin registration
time: 0.023; rss: 87MB	expansion
time: 0.000; rss: 87MB	maybe building test harness
time: 0.001; rss: 87MB	maybe creating a macro crate
Post-expansion node count: 65565
time: 0.000; rss: 87MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 87MB	complete gated feature checking
time: 0.005; rss: 87MB	early lint checks
time: 0.000; rss: 87MB	AST validation
time: 0.003; rss: 87MB	name resolution
time: 0.005; rss: 95MB	lowering ast -> hir
time: 0.001; rss: 99MB	indexing hir
time: 0.000; rss: 99MB	attribute checking
time: 0.000; rss: 87MB	language item collection
time: 0.000; rss: 87MB	lifetime resolution
time: 0.000; rss: 87MB	looking for entry point
time: 0.000; rss: 87MB	looking for plugin registrar
time: 0.008; rss: 94MB	region resolution
time: 0.000; rss: 94MB	loop checking
time: 0.001; rss: 94MB	static item recursion checking
time: 0.020; rss: 94MB	compute_incremental_hashes_map
time: 0.000; rss: 94MB	load_dep_graph
time: 0.000; rss: 94MB	type collecting
time: 0.000; rss: 94MB	variance inference
time: 0.005; rss: 95MB	coherence checking
time: 0.000; rss: 96MB	wf checking
time: 0.596; rss: 108MB	item-types checking
time: 0.000; rss: 108MB	item-bodies checking
time: 0.000; rss: 108MB	drop-impl checking
time: 0.021; rss: 107MB	const checking
time: 0.001; rss: 107MB	privacy checking
time: 0.000; rss: 107MB	stability index
time: 0.000; rss: 107MB	intrinsic checking
time: 0.000; rss: 107MB	effect checking
time: 0.000; rss: 107MB	match checking
time: 0.000; rss: 107MB	liveness checking
time: 0.000; rss: 107MB	rvalue checking
time: 0.041; rss: 112MB	MIR dump
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.001; rss: 112MB	QualifyAndPromoteConstants
  time: 0.000; rss: 112MB	TypeckMir
  time: 0.000; rss: 112MB	SimplifyBranches
  time: 0.000; rss: 112MB	SimplifyCfg
time: 0.002; rss: 112MB	MIR cleanup and validation
time: 0.001; rss: 112MB	borrow checking
time: 0.000; rss: 112MB	reachability checking
time: 0.000; rss: 112MB	death checking
time: 0.000; rss: 112MB	stability checking
time: 0.000; rss: 112MB	unused lib feature checking
time: 0.026; rss: 112MB	lint checking
time: 0.001; rss: 112MB	resolving dependency formats
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.001; rss: 112MB	EraseRegions
  time: 0.000; rss: 112MB	AddCallGuards
  time: 0.000; rss: 112MB	ElaborateDrops
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.000; rss: 112MB	SimplifyCfg
  time: 0.000; rss: 112MB	InstCombine
  time: 0.000; rss: 112MB	Deaggregator
  time: 0.000; rss: 112MB	CopyPropagation
  time: 0.000; rss: 112MB	SimplifyLocals
  time: 0.000; rss: 112MB	AddCallGuards
  time: 0.000; rss: 112MB	PreTrans
time: 0.001; rss: 112MB	MIR optimisations
  time: 0.000; rss: 112MB	write metadata
  time: 0.001; rss: 112MB	translation item collection
  time: 0.000; rss: 112MB	codegen unit partitioning
  time: 0.001; rss: 126MB	internalize symbols
time: 0.055; rss: 126MB	translation
time: 0.000; rss: 126MB	assert dep graph
time: 0.000; rss: 126MB	serialize dep graph
  time: 0.008; rss: 87MB	llvm function passes [0]
  time: 0.000; rss: 87MB	llvm module passes [0]
  time: 0.174; rss: 85MB	codegen passes [0]
  time: 0.000; rss: 85MB	codegen passes [0]
time: 0.184; rss: 85MB	LLVM passes
time: 0.000; rss: 85MB	serialize work products
  time: 0.160; rss: 76MB	running linker
time: 0.162; rss: 76MB	linking
done
